--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "airtable": "^0.12.2",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.2",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "semver": "^7.6.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
