--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "airtable": "^0.12.2",
+    "axios": "^1.7.2",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "react": "^18.2.0",
