--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/airtable": "^0.10.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.67",
-    "@types/react": "^18.2.42",
+    "@types/react": "18.3.1",
     "@types/react-dom": "^18.2.17",
     "airtable": "^0.12.2",
     "axios": "^1.7.2",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-i18next": "^14.1.2",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
@@ -51,6 +51,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/dom": "^10.1.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "node-sass": "^9.0.0"
   }
 }
